--- a/belajar.html
+++ b/belajar.html
@@ -84,15 +84,36 @@
 
         <aside>
             <article>
-                
-                <h2> Kota Bandung</h2>
-                <p> Kota Kembang Paris van Java</p>
-                <figure>
-                <img src="assets/image/Bandung_coa.png" alt="Logo Kota Bandung" width="200">
-                <figcaption> Lambang</figcaption>
-
-                </figure>
-
+                <header> 
+                    <h2> Kota Bandung</h2>
+                    <p> Kota Kembang Paris van Java</p>
+                    <figure>
+                    <img src="assets/image/Bandung_coa.png" alt="Logo Kota Bandung" width="200">
+                    <figcaption> Lambang</figcaption>
+    
+                    </figure>
+                </header>
+                <section>
+                    <h3> Informasi lainnya</h3>
+                    <table>
+                        <tr>
+                            <th>Negara</th>
+                            <td>Indonesia</td>
+                        </tr>
+                        <tr>
+                            <th>Luas Total</th>
+                            <td>165.67 Km <sub> 2</sub></td>
+                        </tr>
+                        <tr>
+                            <th>Bahasa Indonesia</th>
+                            <td>Sunda</td>
+                        </tr>
+                        <tr>
+                            <th>Kode Telepon</th>
+                            <td>+62 22</td>
+                        </tr>
+                    </table>
+                </section>
             </article>
         </aside>
 
